fixed the button width issue on mobile

--- a/styles/sass/_contact.scss
+++ b/styles/sass/_contact.scss
@@ -36,6 +36,7 @@ textarea,
 	resize: none;
 	&:focus {
 		border: 2px dashed $a-color;
+		outline: none;
 	}
 }
 .send-button {
